--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "proxy": "http://localhost:5156",
-  "name": "costs",
+  "name": "cost-front",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
